--- a/CMS/CMS.Web/Views/Candidates/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Delete.cshtml
@@ -93,6 +93,10 @@
         <dd>
             @Html.DisplayFor(model => model.CompanyName)
         </dd>
+
+        <dt class="col-sm-2">Position Name:</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.PositionName)</dd>
+
         <dt>
             Experience:
         </dt>
