--- a/CMS/CMS.Web/Views/Candidates/Details.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Details.cshtml
@@ -15,6 +15,9 @@
     <dt class="col-sm-2">CV Provider name:</dt>
     <dd class="col-sm-10">@Html.DisplayFor(model => model.CompanyName)</dd>
 
+    <dt class="col-sm-2">Position Name:</dt>
+    <dd class="col-sm-10">@Html.DisplayFor(model => model.PositionName)</dd>
+
 
     <dt class="col-sm-2">Experience:</dt>
     <dd class="col-sm-10">@Html.DisplayFor(model => model.Experience)</dd>
