--- a/CMS/CMS.Web/Views/Account/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Account/Edit.cshtml
@@ -43,7 +43,7 @@
     </div>
 
     <div class="form-group " style="margin-top: 10px;">
-        <input type="submit" value="Save" class="btn btn-primary" />
+        <input type="submit" value="Submit" class="btn btn-primary" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
     </div>
