--- a/CMS/CMS.Web/Views/CarrerOffer/Edit.cshtml
+++ b/CMS/CMS.Web/Views/CarrerOffer/Edit.cshtml
@@ -21,6 +21,6 @@
  
     <div class="form-group">
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-        <input type="submit" value="Save" class="btn btn-outline-primary" />
+        <input type="submit" value="Submit" class="btn btn-outline-primary" />
     </div>
 </form>
