--- a/CMS/CMS.Web/Views/Company/UpdateCompany.cshtml
+++ b/CMS/CMS.Web/Views/Company/UpdateCompany.cshtml
@@ -52,7 +52,7 @@
     </div>
 
     <div class="form-group " style="margin-top: 10px;">
-        <input type="submit" class="btn btn-primary" value="Save" />
+        <input type="submit" class="btn btn-primary" value="Submit" />
         <a class="btn btn-secondary" asp-action="GetCompanies">Back to list</a>
 
     </div>
