--- a/CMS/CMS.Web/Views/Country/UpdateCountry.cshtml
+++ b/CMS/CMS.Web/Views/Country/UpdateCountry.cshtml
@@ -11,7 +11,7 @@
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group " style="margin-top:10px;">
-        <input type="submit" class="btn btn-primary" value="Save" />
+        <input type="submit" class="btn btn-primary" value="Submit" />
         <a class="btn btn-secondary" asp-action="GetCountries"> Back to list</a>
 
     </div>
