--- a/CMS/CMS.Web/Views/Interviews/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Edit.cshtml
@@ -52,7 +52,7 @@
     </div>
 
 
-     <div class="form-group" style="margin-top: 30px;">
+    @*  <div class="form-group" style="margin-top: 30px;">
         <label asp-for="ArchitectureInterviewerId" class="control-label">Architecture Interviewers</label>
         @if (ViewBag.architecturesList != null)
         {
@@ -62,7 +62,7 @@
         }
         <span asp-validation-for="ArchitectureInterviewerId" class="text-danger"></span>
     </div>
-
+ *@
 
 
     <div class="form-group" style="margin-top: 15px;">
@@ -151,7 +151,7 @@
     </div>
 
     <div class="form-group  " style="margin-top:10px;">
-        <input type="submit" value="Save" class="btn btn-primary" />
+        <input type="submit" value="Submit" class="btn btn-primary" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
     </div>
