--- a/CMS/CMS.Web/Views/Notifications/IndexArchinotification.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/IndexArchinotification.cshtml
@@ -26,8 +26,10 @@
 
 
                                 <td>
-                                    <a style="color:blue" href="@Url.Action("Details", "Notifications", new { id = notification.NotificationsId })">
-                                        @Html.Raw(notification.Title)
+                                    <a  href="@Url.Action("Details", "Notifications", new { id = notification.NotificationsId })">
+                                        <span style="@(notification.IsRead ? "color: blue;" : "font-weight: bold; color: black;")">
+                                            @Html.Raw(notification.Title)
+                                        </span>
                                     </a>
                                 </td>
 
