--- a/CMS/CMS.Web/Views/Notifications/IndexHRnotification.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/IndexHRnotification.cshtml
@@ -26,9 +26,12 @@
 
 
                 <td >
-                    <a style="color:blue" href="@Url.Action("Details", "Notifications", new { id = notification.NotificationsId })">
-                                        @Html.Raw(notification.Title)
-                    </a>
+                                    <a href="@Url.Action("Details", "Notifications", new { id = notification.NotificationsId })">
+                                        <span style="@(notification.IsRead ? "color: blue;" : "font-weight: bold; color: black;")">
+                                            @Html.Raw(notification.Title)
+                                        </span>
+                                    </a>
+
                 </td>
 
                 <td>@notification.SendDate</td>
