--- a/CMS/CMS.Web/Views/Position/UpdatePosition.cshtml
+++ b/CMS/CMS.Web/Views/Position/UpdatePosition.cshtml
@@ -16,7 +16,7 @@
     </div>
 
     <div class="form-group text-end" style="margin-top:4px;">
-        <input type="submit" class="btn btn-primary" value="Save" />
+        <input type="submit" class="btn btn-primary" value="Submit" />
         <a class="btn btn-secondary" asp-action="GetPositions"> Back to list</a>
     </div>
 </form>
