--- a/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="col-md-3">
                 @Html.Label("Filter by Score:")
-                @Html.TextBox("scoreFilter", null, new { @class = "form-control" })
+                @Html.TextBox("scoreFilter", null, new { @class = "form-control", placeholder = "Search by Score" })
             </div>
             <div class="col-md-3">
                 @Html.Label("Filter by Status:")
@@ -53,8 +53,13 @@
 
 
 
-
             <div class="col-md-3" style="margin-top:27px;">
+                <label>&nbsp;</label>
+                <button type="submit" class="btn btn-primary btn-block">Filter</button>
+            </div>
+
+
+            <div class="col-md-3" style="margin-top:10px;margin-bottom: 20px;" >
                 <label>&nbsp;</label>
                 <a asp-action="ExportFilteredData"
                    asp-route-positionFilter="@ViewBag.positionFilter"
@@ -67,11 +72,6 @@
                    class="btn btn-success btn-block">Export to Excel</a>
             </div>
 
-
-            <div class="col-md-3" style="margin-top:10px;margin-bottom: 8px;" >
-                <label>&nbsp;</label>
-                <button type="submit" class="btn btn-primary btn-block">Filter</button>
-            </div>
 
 
         </div>
@@ -90,6 +90,7 @@
                 <th>Position</th>
                 <th>Interviewer</th>
                 <th>Date</th>
+                <th>Time</th>
                 <th>Status</th>
                 <th hidden>Parent ID</th>
                 @* <th>Score</th> *@
@@ -107,7 +108,8 @@
                         <td>@Html.DisplayFor(modelItem => item.FullName)</td>
                         <td>@Html.DisplayFor(modelItem => item.Name)</td>
                         <td>@item.InterviewerName</td>
-                        <td>@item.Date</td>
+                        <td>@item.Date.ToString("dd-MM-yyyy")</td>
+                        <td>@item.Date.ToString("h:mm tt")</td>
                         <td>@item.StatusName</td>
                         <td hidden>@item.ParentId</td>
                         @* <td>@item.Score</td> *@
