--- a/CMS/CMS.Web/Views/Interviews/Create.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Create.cshtml
@@ -114,7 +114,7 @@
 
 </form>
 @* <p>@Html.ValidationSummary()</p> *@
-<script>
+@* <script>
 
     document.getElementById("createForm").onsubmit = function () {
         return validateDate();
@@ -134,7 +134,7 @@
         return true;
     }
 </script>
-
+ *@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/js/standalone/selectize.min.js"></script>
 
