--- a/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
@@ -37,29 +37,29 @@
                 <input type="text" id="candidateFilter" name="candidateFilter" class="form-control" placeholder="Search by Candidate Name">
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-3" style="margin-top: 25px;">
                 @Html.Label("Filter by Interviewer:")
                 @Html.DropDownList("interviewerFilter", ViewBag.InterviewerList as SelectList, "All Interviewers", new { @class = "form-control" })
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-3" style="margin-top: 25px;">
                 <label for="fromDate">From Date:</label>
                 <input type="date" id="fromDate" name="fromDate" class="form-control">
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3" style="margin-top: 25px;">
                 <label for="toDate">To Date:</label>
                 <input type="date" id="toDate" name="toDate" class="form-control">
             </div>
 
 
 
-            <div class="col-md-3" style="margin-top:27px;">
+            <div class="col-md-3" style="margin-top:52px;">
                 <label>&nbsp;</label>
                 <button type="submit" class="btn btn-primary btn-block">Filter</button>
             </div>
 
 
-            <div class="col-md-3" style="margin-top:10px;margin-bottom: 20px;" >
+            <div class="col-md-3" style="margin-left: 83%;margin-top: -38px;">
                 <label>&nbsp;</label>
                 <a asp-action="ExportFilteredData"
                    asp-route-positionFilter="@ViewBag.positionFilter"
@@ -82,7 +82,7 @@
 
 
 
-<div class="card-body">
+<div class="card-body" style="margin-top: 25px;">
     <table id="add-rows3" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
         <thead>
             <tr>
